--- a/src/components/NewPostForm.css
+++ b/src/components/NewPostForm.css
@@ -3,7 +3,9 @@
   text-shadow: 2px 2px black;
   font-family: "Times New Roman", Times, serif;
   font-size: 40px;
+  text-align: center;
 }
+
 .auth-component-input {
   color: rgb(252, 0, 0);
 }
@@ -11,7 +13,7 @@
 .card {
   display: flex;
   color: rgb(216, 17, 17);
-  font-family: "ITC Benguiat W01";
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   border-radius: 25px;
   border: 2px solid rgb(216, 17, 17);
   padding: 4px;
@@ -34,34 +36,37 @@ button {
 }
 
 /* Before button been click */
-.button:hover {
+.btn:hover {
   background-color: rgb(255, 0, 0);
   color: black;
   border: 3px solid rgb(255, 0, 0);
 }
 
 /* Once button has been click */
-button:active {
+.btn:active {
   color: rgb(252, 0, 0);
   background-color: #060706;
   box-shadow: 0 1px 8px 8px rgba(255, 0, 0, 0.589);
-  transform: translateY(4px);
 }
 
 a {
   color: rgb(243, 7, 7);
 }
 
+/* these are the controls for scrollbar */
 ::-webkit-scrollbar {
   width: 20px;
 }
 
 ::-webkit-scrollbar-track {
+  background-color: rgb(12, 5, 5);
   box-shadow: inset 0 0 5px red;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(216, 17, 17);
+  background: linear-gradient(197deg, rgb(212, 17, 17), rgb(41, 5, 5));
   border-radius: 10px;
 }
+
+/* ------------------------>>>>> */
